--- a/notebooks/all-data-notebook.ipynb
+++ b/notebooks/all-data-notebook.ipynb
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "df_train_final = df_train[df_train.notna().any(axis=1)]\n",
+    "df_train_final = df_train[df_train[['OffenseTeam', 'DefenseTeam']].notna().all(axis=1)]\n",
     "df_train_final"
    ],
    "metadata": {
