--- a/notebooks/dtc-notebook.ipynb
+++ b/notebooks/dtc-notebook.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "df_train = pd.concat([df2,df3, df4, df5, df6], ignore_index=True)\n",
-    "df_train = df_train.drop(['Unnamed: 10','Unnamed: 12','Unnamed: 16','Unnamed: 17', 'Description','NextScore','TeamWin','Challenger','IsMeasurement',], axis = 1)"
+    "df_train = df_train.drop(['Unnamed: 10','Unnamed: 12','Unnamed: 16','Unnamed: 17', 'Description','NextScore','TeamWin','Challenger','IsMeasurement','YardLineDirection','YardLineFixed'], axis = 1)"
    ],
    "metadata": {
     "collapsed": false,
@@ -150,9 +150,9 @@
     }
    ],
    "source": [
-    "X_train = df_train_final.drop('Winner', axis = 1)\n",
+    "X_train = df_train_final.drop(['Winner','GameDate','GameId'], axis = 1)\n",
     "y_train = df_train_final['Winner']\n",
-    "X_test = df1.drop('Winner', axis = 1)\n",
+    "X_test = df1.drop(['Winner','GameDate','GameId'], axis = 1)\n",
     "y_test = df1['Winner']"
    ],
    "metadata": {
@@ -167,6 +167,18 @@
   },
   {
    "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "X_train = X_train.to_numpy().reshape(-1,34)\n",
+    "X_test = df1.drop(['Winner','GameDate','GameId'], axis = 1).reshape(-1,34)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7dc24d481f89646"
+  },
+  {
+   "cell_type": "code",
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
@@ -175,87 +187,62 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[39], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msklearn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpreprocessing\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m StandardScaler\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msklearn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodel_selection\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m train_test_split\n",
+      "Cell \u001B[1;32mIn[41], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msklearn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mtree\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m DecisionTreeClassifier \u001B[38;5;28;01mas\u001B[39;00m dtc\n\u001B[0;32m      2\u001B[0m \u001B[38;5;66;03m# from sklearn.model_selection import train_test_split as tts\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msklearn\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m tree\n",
       "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'sklearn'"
      ]
     }
    ],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.decomposition import PCA"
+    "from sklearn.tree import DecisionTreeClassifier as dtc\n",
+    "# from sklearn.model_selection import train_test_split as tts\n",
+    "from sklearn import tree\n",
+    "from sklearn.metrics import accuracy_score"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-10T20:15:33.959429800Z",
-     "start_time": "2024-02-10T20:15:33.932908900Z"
+     "end_time": "2024-02-10T21:12:04.642999700Z",
+     "start_time": "2024-02-10T21:12:04.579786200Z"
     }
    },
    "id": "de3f32ceb3cfa223",
-   "execution_count": 39
+   "execution_count": 41
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "ss = StandardScaler()\n",
-    "X_train_scaled = ss.fit_transform(X_train)\n",
-    "X_test_scaled = ss.transform(X_test)"
+    "clf = dtc(criterion='entropy')\n",
+    "clf.fit(X_train,y_train)"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "a397b89eb2be5fcc"
+   "id": "d9ffa23b90807f69"
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "pca = PCA().fit(X_train_scaled)\n",
-    "\n",
-    "plt.plot(pca.explained_variance_ratio_.cumsum(), lw=3, color='#087E8B')\n",
-    "plt.title('Cumulative explained variance by number of principal components', size=20)\n",
-    "plt.show()"
+    "tree.plot_tree(clf, feature_names=['GPA','SAT Score','Charisma Score'], class_names=['Rejected','Accepted'])\n"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "a01cf862203160ca"
+   "id": "d3471f9af0dc6d63"
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "loadings = pd.DataFrame(\n",
-    "    data=pca.components_.T * np.sqrt(pca.explained_variance_),\n",
-    "    columns=[f'PC{i}' for i in range(1, len(X_train.columns) + 1)],\n",
-    "    index=X_train.columns\n",
-    ")\n",
-    "loadings.head()"
+    "pred = clf.predict(X_test)\n",
+    "accuracy = accuracy_score(pred, y_test)\n",
+    "accuracy"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "dd8dcd1664be5ac4"
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "pc1_loadings = loadings.sort_values(by='PC1', ascending=False)[['PC1']]\n",
-    "pc1_loadings = pc1_loadings.reset_index()\n",
-    "pc1_loadings.columns = ['Attribute', 'CorrelationWithPC1']\n",
-    "\n",
-    "plt.bar(x=pc1_loadings['Attribute'], height=pc1_loadings['CorrelationWithPC1'], color='#087E8B')\n",
-    "plt.title('PCA loading scores (first principal component)', size=20)\n",
-    "plt.xticks(rotation='vertical')\n",
-    "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "d910ed82eb38c28"
+   "id": "b5912c8ae7b3b44d"
   }
  ],
  "metadata": {
