--- a/notebooks/all-data-notebook.ipynb
+++ b/notebooks/all-data-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 222,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 223,
    "id": "aea4896ffa921ad3",
    "metadata": {
     "ExecuteTime": {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 224,
    "id": "940a6fe1eb763440",
    "metadata": {
     "ExecuteTime": {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 225,
    "id": "ff1a51d320398d61",
    "metadata": {
     "ExecuteTime": {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 226,
    "id": "116a4e69a0777e14",
    "metadata": {
     "ExecuteTime": {
@@ -475,7 +475,7 @@
        "[24661 rows x 34 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 227,
    "id": "6f53c29d",
    "metadata": {},
    "outputs": [
@@ -875,7 +875,7 @@
        "[4766 rows x 34 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 228,
    "id": "831a387c",
    "metadata": {},
    "outputs": [],
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 229,
    "id": "251e2e08",
    "metadata": {},
    "outputs": [],
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 230,
    "id": "97df431e",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1182,7 @@
        "[163 rows x 12 columns]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 231,
    "id": "6439fb46",
    "metadata": {},
    "outputs": [
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 232,
    "id": "5ab67a6a",
    "metadata": {},
    "outputs": [],
@@ -1320,7 +1320,7 @@
     "# Populate the \"Winner\" column with the corresponding winner team\n",
     "merged_train_df['Winner'] = merged_train_df.apply(lambda row: True if row['OffenseTeam'] == row['Winner/tie'] else False, axis=1)\n",
     "\n",
-    "merged_train_df['WinningTeam'] = merged_train_df.apply(lambda row: row['Winner/tie'] if row['OffenseTeam'] == row['Winner/tie'] else None, axis=1)\n",
+    "merged_train_df['WinningTeam'] = merged_train_df['Winner/tie']\n",
     "\n",
     "# Drop unnecessary columns from merged_df\n",
     "merged_train_df.drop(['Winner/tie', 'Loser/tie'], axis=1, inplace=True)"
@@ -1336,10 +1336,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 233,
    "id": "65936aca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GameId</th>\n",
+       "      <th>GameDate</th>\n",
+       "      <th>Quarter</th>\n",
+       "      <th>Minute</th>\n",
+       "      <th>Second</th>\n",
+       "      <th>OffenseTeam</th>\n",
+       "      <th>DefenseTeam</th>\n",
+       "      <th>Down</th>\n",
+       "      <th>ToGo</th>\n",
+       "      <th>YardLine</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Winner/tie</th>\n",
+       "      <th>PtsW</th>\n",
+       "      <th>PtsL</th>\n",
+       "      <th>YdsW</th>\n",
+       "      <th>TOW</th>\n",
+       "      <th>YdsL</th>\n",
+       "      <th>TOL</th>\n",
+       "      <th>Winner</th>\n",
+       "      <th>WinningTeam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023090700</td>\n",
+       "      <td>2023-09-07</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>54</td>\n",
+       "      <td>KC</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8:20PM</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>21</td>\n",
+       "      <td>20</td>\n",
+       "      <td>368</td>\n",
+       "      <td>1</td>\n",
+       "      <td>316</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>DET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023090700</td>\n",
+       "      <td>2023-09-07</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>56</td>\n",
+       "      <td>KC</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>21</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8:20PM</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>21</td>\n",
+       "      <td>20</td>\n",
+       "      <td>368</td>\n",
+       "      <td>1</td>\n",
+       "      <td>316</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>DET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023090700</td>\n",
+       "      <td>2023-09-07</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>20</td>\n",
+       "      <td>KC</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>31</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8:20PM</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>21</td>\n",
+       "      <td>20</td>\n",
+       "      <td>368</td>\n",
+       "      <td>1</td>\n",
+       "      <td>316</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>DET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023090700</td>\n",
+       "      <td>2023-09-07</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>44</td>\n",
+       "      <td>KC</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>36</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8:20PM</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>21</td>\n",
+       "      <td>20</td>\n",
+       "      <td>368</td>\n",
+       "      <td>1</td>\n",
+       "      <td>316</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>DET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023090700</td>\n",
+       "      <td>2023-09-07</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>35</td>\n",
+       "      <td>KC</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>36</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8:20PM</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>21</td>\n",
+       "      <td>20</td>\n",
+       "      <td>368</td>\n",
+       "      <td>1</td>\n",
+       "      <td>316</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>DET</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 47 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       GameId    GameDate  Quarter  Minute  Second OffenseTeam DefenseTeam  \\\n",
+       "0  2023090700  2023-09-07        3      12      54          KC         DET   \n",
+       "1  2023090700  2023-09-07        1      12      56          KC         DET   \n",
+       "2  2023090700  2023-09-07        1      12      20          KC         DET   \n",
+       "3  2023090700  2023-09-07        1      11      44          KC         DET   \n",
+       "4  2023090700  2023-09-07        1      11      35          KC         DET   \n",
+       "\n",
+       "   Down  ToGo  YardLine  ...    Time  Winner/tie  PtsW PtsL YdsW  TOW  YdsL  \\\n",
+       "0     0     0       100  ...  8:20PM         DET    21   20  368    1   316   \n",
+       "1     3     2        21  ...  8:20PM         DET    21   20  368    1   316   \n",
+       "2     1    10        31  ...  8:20PM         DET    21   20  368    1   316   \n",
+       "3     2     5        36  ...  8:20PM         DET    21   20  368    1   316   \n",
+       "4     3     5        36  ...  8:20PM         DET    21   20  368    1   316   \n",
+       "\n",
+       "   TOL  Winner WinningTeam  \n",
+       "0    1   False         DET  \n",
+       "1    1   False         DET  \n",
+       "2    1   False         DET  \n",
+       "3    1   False         DET  \n",
+       "4    1   False         DET  \n",
+       "\n",
+       "[5 rows x 47 columns]"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Merge with the original dataset based on 'Date' and 'GameDate'\n",
     "merged_test_df = pd.merge(df_test_final.sort_values('GameDate'), \n",
@@ -1349,23 +1549,58 @@
     "                          how = 'left')\n",
     "\n",
     "# Populate the \"Winner\" column with the corresponding winner team\n",
-    "merged_test_df['Winner'] = merged_test_df.apply(lambda row: row['Winner/tie'] if row['OffenseTeam'] == row['Winner/tie'] else None, axis=1)\n",
+    "merged_test_df['Winner'] = merged_test_df.apply(lambda row: row['Winner/tie'] if row['OffenseTeam'] == row['Winner/tie'] else False, axis=1)\n",
     "\n",
-    "merged_test_df['WinningTeam'] = merged_test_df.apply(lambda row: row['Winner/tie'] if row['OffenseTeam'] == row['Winner/tie'] else None, axis=1)\n",
+    "merged_test_df['WinningTeam'] = merged_test_df['Winner/tie']\n",
     "\n",
     "# Drop unnecessary columns from merged_df\n",
-    "merged_test_df.drop(['Winner/tie', 'Loser/tie'], axis=1, inplace=True)"
+    "merged_test_df.drop(['Loser/tie'], axis=1, inplace=True)\n",
+    "\n",
+    "merged_test_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 234,
    "id": "40518f83",
    "metadata": {},
    "outputs": [],
    "source": [
     "merged_train_df.to_csv(\"../datasets/train.csv\")\n",
-    "merged_train_df.to_csv(\"../datasets/test.csv\")"
+    "merged_test_df.to_csv(\"../datasets/test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "2e97b4fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       DET\n",
+       "1       DET\n",
+       "2       DET\n",
+       "3       DET\n",
+       "4       DET\n",
+       "       ... \n",
+       "6960     SF\n",
+       "6961    BUF\n",
+       "6962     SF\n",
+       "6963    BUF\n",
+       "6964     SF\n",
+       "Name: Winner/tie, Length: 6965, dtype: object"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test_test = pd.read_csv(\"../datasets/test.csv\")\n",
+    "df_test_test['Winner/tie']"
    ]
   }
  ],
