--- a/notebooks/pca-notebook.ipynb
+++ b/notebooks/pca-notebook.ipynb
@@ -65,17 +65,17 @@
    "outputs": [],
    "source": [
     "df_train = pd.concat([df2,df3, df4, df5, df6], ignore_index=True)\n",
-    "df_train = df_train.drop(['Unnamed: 10','Unnamed: 12','Unnamed: 16','Unnamed: 17', 'Description','NextScore','TeamWin','Challenger','IsMeasurement',], axis = 1)"
+    "df_train = df_train.drop(['Unnamed: 10','Unnamed: 12','Unnamed: 16','Unnamed: 17', 'Description','NextScore','TeamWin','Challenger','IsMeasurement','YardLineDirection','YardLineFixed'], axis = 1)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-10T20:11:09.765103Z",
-     "start_time": "2024-02-10T20:11:09.715533100Z"
+     "end_time": "2024-02-10T21:28:55.079307200Z",
+     "start_time": "2024-02-10T21:28:54.647813Z"
     }
    },
    "id": "ff1a51d320398d61",
-   "execution_count": 34
+   "execution_count": 42
   },
   {
    "cell_type": "code",
@@ -180,11 +180,7 @@
      ]
     }
    ],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.decomposition import PCA"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
