--- a/notebooks/dtc-notebook.ipynb
+++ b/notebooks/dtc-notebook.ipynb
@@ -396,6 +396,15 @@
   },
   {
    "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "116e6d3b48412c50"
+  },
+  {
+   "cell_type": "code",
    "outputs": [
     {
      "data": {
