Update the README, HTML page, and the notebooks.

--- a/notebooks/codyl-notebook-playbyplay.ipynb
+++ b/notebooks/codyl-notebook-playbyplay.ipynb
@@ -9,6 +9,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
@@ -523,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -583,167 +590,20 @@
        "      <td>KC</td>\n",
        "      <td>816</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>HOU</td>\n",
-       "      <td>KC</td>\n",
-       "      <td>400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>KC</td>\n",
-       "      <td>ATL</td>\n",
-       "      <td>439</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>KC</td>\n",
-       "      <td>BAL</td>\n",
-       "      <td>512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>KC</td>\n",
-       "      <td>BUF</td>\n",
-       "      <td>470</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>KC</td>\n",
-       "      <td>CAR</td>\n",
-       "      <td>433</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>KC</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>KC</td>\n",
-       "      <td>HOU</td>\n",
-       "      <td>406</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>KC</td>\n",
-       "      <td>LAC</td>\n",
-       "      <td>764</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>KC</td>\n",
-       "      <td>LV</td>\n",
-       "      <td>1006</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>KC</td>\n",
-       "      <td>MIA</td>\n",
-       "      <td>490</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>KC</td>\n",
-       "      <td>NE</td>\n",
-       "      <td>329</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>KC</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>410</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>KC</td>\n",
-       "      <td>NYJ</td>\n",
-       "      <td>496</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>KC</td>\n",
-       "      <td>TB</td>\n",
-       "      <td>591</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>LAC</td>\n",
-       "      <td>KC</td>\n",
-       "      <td>892</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>LV</td>\n",
-       "      <td>KC</td>\n",
-       "      <td>914</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>MIA</td>\n",
-       "      <td>KC</td>\n",
-       "      <td>392</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>NE</td>\n",
-       "      <td>KC</td>\n",
-       "      <td>437</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>NO</td>\n",
-       "      <td>KC</td>\n",
-       "      <td>288</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>NYJ</td>\n",
-       "      <td>KC</td>\n",
-       "      <td>221</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>TB</td>\n",
-       "      <td>KC</td>\n",
-       "      <td>473</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   OffenseTeam DefenseTeam  Yards\n",
-       "0          ATL          KC    387\n",
-       "1          BAL          KC    237\n",
-       "2          BUF          KC    210\n",
-       "3          CAR          KC    435\n",
-       "4          DEN          KC    816\n",
-       "5          HOU          KC    400\n",
-       "6           KC         ATL    439\n",
-       "7           KC         BAL    512\n",
-       "8           KC         BUF    470\n",
-       "9           KC         CAR    433\n",
-       "10          KC         DEN    800\n",
-       "11          KC         HOU    406\n",
-       "12          KC         LAC    764\n",
-       "13          KC          LV   1006\n",
-       "14          KC         MIA    490\n",
-       "15          KC          NE    329\n",
-       "16          KC          NO    410\n",
-       "17          KC         NYJ    496\n",
-       "18          KC          TB    591\n",
-       "19         LAC          KC    892\n",
-       "20          LV          KC    914\n",
-       "21         MIA          KC    392\n",
-       "22          NE          KC    437\n",
-       "23          NO          KC    288\n",
-       "24         NYJ          KC    221\n",
-       "25          TB          KC    473"
+       "  OffenseTeam DefenseTeam  Yards\n",
+       "0         ATL          KC    387\n",
+       "1         BAL          KC    237\n",
+       "2         BUF          KC    210\n",
+       "3         CAR          KC    435\n",
+       "4         DEN          KC    816"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,12 +611,12 @@
    "source": [
     "kc_tot_yards = kc_df.groupby(['OffenseTeam', 'DefenseTeam'])['Yards'].sum().reset_index()\n",
     "\n",
-    "kc_tot_yards"
+    "kc_tot_yards.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -816,167 +676,20 @@
        "      <td>SF</td>\n",
        "      <td>662</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>MIA</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>431</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>NE</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>326</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>NO</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>NYG</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>253</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>NYJ</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>305</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>PHI</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>287</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>SEA</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>SF</td>\n",
-       "      <td>ARI</td>\n",
-       "      <td>756</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>SF</td>\n",
-       "      <td>BUF</td>\n",
-       "      <td>436</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>SF</td>\n",
-       "      <td>DAL</td>\n",
-       "      <td>486</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>SF</td>\n",
-       "      <td>GB</td>\n",
-       "      <td>362</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>SF</td>\n",
-       "      <td>LA</td>\n",
-       "      <td>751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>SF</td>\n",
-       "      <td>MIA</td>\n",
-       "      <td>304</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>SF</td>\n",
-       "      <td>NE</td>\n",
-       "      <td>506</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>SF</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>308</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>SF</td>\n",
-       "      <td>NYG</td>\n",
-       "      <td>457</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>SF</td>\n",
-       "      <td>NYJ</td>\n",
-       "      <td>446</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>SF</td>\n",
-       "      <td>PHI</td>\n",
-       "      <td>472</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>SF</td>\n",
-       "      <td>SEA</td>\n",
-       "      <td>702</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>SF</td>\n",
-       "      <td>WAS</td>\n",
-       "      <td>449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>WAS</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>205</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   OffenseTeam DefenseTeam  Yards\n",
-       "0          ARI          SF    780\n",
-       "1          BUF          SF    461\n",
-       "2          DAL          SF    291\n",
-       "3           GB          SF    423\n",
-       "4           LA          SF    662\n",
-       "5          MIA          SF    431\n",
-       "6           NE          SF    326\n",
-       "7           NO          SF    247\n",
-       "8          NYG          SF    253\n",
-       "9          NYJ          SF    305\n",
-       "10         PHI          SF    287\n",
-       "11         SEA          SF    635\n",
-       "12          SF         ARI    756\n",
-       "13          SF         BUF    436\n",
-       "14          SF         DAL    486\n",
-       "15          SF          GB    362\n",
-       "16          SF          LA    751\n",
-       "17          SF         MIA    304\n",
-       "18          SF          NE    506\n",
-       "19          SF          NO    308\n",
-       "20          SF         NYG    457\n",
-       "21          SF         NYJ    446\n",
-       "22          SF         PHI    472\n",
-       "23          SF         SEA    702\n",
-       "24          SF         WAS    449\n",
-       "25         WAS          SF    205"
+       "  OffenseTeam DefenseTeam  Yards\n",
+       "0         ARI          SF    780\n",
+       "1         BUF          SF    461\n",
+       "2         DAL          SF    291\n",
+       "3          GB          SF    423\n",
+       "4          LA          SF    662"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +697,7 @@
    "source": [
     "sf_tot_yards = sf_df.groupby(['OffenseTeam', 'DefenseTeam'])['Yards'].sum().reset_index()\n",
     "\n",
-    "sf_tot_yards"
+    "sf_tot_yards.head()"
    ]
   },
   {
@@ -1082,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +868,7 @@
        "4          LA          SF            42"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1837,7 +1550,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- After a quick analysis, you can see that KC more prone to sacks in the 3rd quarter for this season."
+    "- After a quick analysis, you can see that KC more prone to sacks in the 3rd quarter for this season.\n",
+    "\n",
+    "- SF seems to have pretty vulnerable in the first half, with the highest frequency of sacks occurring in the 3rd quarter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Now we want to "
    ]
   },
   {
